--- a/angular2-typescript/listProject/src/app/list/list.component.html
+++ b/angular2-typescript/listProject/src/app/list/list.component.html
@@ -1,3 +1,6 @@
-<p>
-  list works!
-</p>
+<div class="list-group">
+	<app-item
+		*ngFor="let character of characters"
+		[character]="character"
+		(sideAssigned)="onSideAssigned($event)"></app-item>
+</div>
