--- a/angular2-typescript/listProject/src/app/tabs/tabs.component.html
+++ b/angular2-typescript/listProject/src/app/tabs/tabs.component.html
@@ -1,3 +1,8 @@
-<p>
-  tabs works!
-</p>
+<div>
+	<ul class="nav nav-tabs">
+		<li class="nav-item" role="presentation"><a (click)="choose('all')" [ngClass]="{active:chosenList==='all'}" class="nav-link active" href="#">All</a></li>
+		<li class="nav-item" role="presentation"><a (click)="choose('light')" [ngClass]="{active:chosenList==='light'}" class="nav-link" href="#">Light</a></li>
+		<li class="nav-item" role="presentation"><a (click)="choose('dark')" [ngClass]="{active:chosenList==='dark'}" class="nav-link" href="#">Dark</a></li>
+	</ul>
+	<app-list [characters]="getCharacters()" (sideAssigned)="onSideAssigned($event)"></app-list>
+</div>
