RELATED BRANCH: master; MESSAGE: angular2+ and typescript pt7

--- a/angular2-typescript/listProject/src/app/list/list.component.html
+++ b/angular2-typescript/listProject/src/app/list/list.component.html
@@ -1,6 +1,3 @@
 <div class="list-group">
-	<app-item
-		*ngFor="let character of characters"
-		[character]="character"
-		(sideAssigned)="onSideAssigned($event)"></app-item>
+	<app-item *ngFor="let character of characters" [character]="character" ></app-item>
 </div>
