--- a/angular2-typescript/listProject/src/app/item/item.component.html
+++ b/angular2-typescript/listProject/src/app/item/item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+<a class="list-group-item list-group-item-action flex-column align-items-start">
 	<div class="d-flex w-100 justify-content-between">
 		<h5 class="mb-1">{{character.name}}</h5>
 	</div>
