Some progress has been made!

--- a/web-components/course1/advanced-stencil/src/components/stock-finder/stock-finder.css
+++ b/web-components/course1/advanced-stencil/src/components/stock-finder/stock-finder.css
@@ -42,3 +42,21 @@ form button:disabled {
     color: white; 
     cursor: not-allowed;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul li {
+    margin: 0.25rem 0;
+    padding: 0.25rem;
+    border: 1px solid lightgray;
+    cursor: pointer;  
+}
+
+li:hover {
+  background-color: purple;
+  color: white;
+}
