--- a/nextjs-14+graphql/next-js/src/app/products/page.module.css
+++ b/nextjs-14+graphql/next-js/src/app/products/page.module.css
@@ -11,6 +11,18 @@
 	border-radius: 12px;
 	color: black;
 	text-decoration: none;
+	position: relative;
+}
+
+.price {
+	background-color: lightblue;
+	border-radius: 4px;
+	padding: 2px 8px;
+	display: inline-block;
+	font-size: 10px;
+	position: absolute;
+	top: 12px;
+	right: 12px;
 }
 
 .title {
